# delete-link-bug-example

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/posts/workdir/: dna.yaml
dnas/posts/zomes/coordinator/nolinks/: Cargo.toml
dnas/posts/zomes/coordinator/nolinks/src/: lib.rs
dnas/posts/zomes/coordinator/posts/src/: author_to_posts.rs  lib.rs  post.rs
dnas/posts/zomes/integrity/nolinks/: Cargo.toml
dnas/posts/zomes/integrity/posts/src/: author_to_posts.rs  lib.rs  post.rs
tests/src/posts/posts/: author-to-posts.test.ts  post.test.ts
ui/src/: App.vue
ui/src/posts/nolinks/: types.ts
ui/src/posts/posts/: CreatePost.vue  EditPost.vue  PostDetail.vue  PostsForAuthor.vue  types.ts
ui/src/test/blah/: types.ts
workdir/: happ.yaml  web-happ.yaml
