[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.3"
hdk = "=0.1.3"
serde = "1"

[workspace.dependencies.blah]
path = "dnas/test/zomes/coordinator/blah"

[workspace.dependencies.blah_integrity]
path = "dnas/test/zomes/integrity/blah"

[workspace.dependencies.nolinks]
path = "dnas/posts/zomes/coordinator/nolinks"

[workspace.dependencies.nolinks_integrity]
path = "dnas/posts/zomes/integrity/nolinks"

[workspace.dependencies.posts]
path = "dnas/posts/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/posts/zomes/integrity/posts"
